<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.StepDetailFragment">

    <FrameLayout
        android:id="@+id/video_container_frame_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/step_text_relative_layout"
        android:layout_alignParentTop="true">

        <com.google.android.exoplayer2.ui.PlayerView
            android:id="@+id/playerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/no_video_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/no_video_message"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:visibility="invisible" />

    </FrameLayout>

    <RelativeLayout
        android:id="@+id/step_text_relative_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_layout">

        <TextView
            android:id="@+id/step_title_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:text="@string/step_title_dummy_text"
            android:textAlignment="center"
            android:textSize="@dimen/title_text_size"
            tools:text="Start filling prep" />

        <TextView
            android:id="@+id/step_description_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/step_title_textView"
            android:padding="@dimen/tv_step_details_margin"
            android:text="@string/step_description_dummy_text"
            android:textSize="@dimen/step_description_text_size"
            tools:text="@string/step_description_dummy_text" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/previous_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/previous"
            android:visibility="invisible"/>

        <Button
            android:id="@+id/next_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/next"
            android:visibility="invisible"/>
    </LinearLayout>

</RelativeLayout>